@@ -75,8 +75,7 @@ dnl
 dnl Start of pkg-config checks
 dnl
 PKG_CHECK_MODULES(LIBGNOME, glib-2.0 >= 1.3.7 gmodule-2.0 >= 1.3.7 gnome-vfs-2.0 >= 1.1 \
-	          libxml-2.0 >= 2.4.1 libbonobo-2.0 >= 1.100.0 bonobo-config-2.0 >= 0.1.3 \
-	          gconf-2.0 >= 1.1.1)
+	          libxml-2.0 >= 2.4.1 libbonobo-2.0 >= 1.100.0 gconf-2.0 >= 1.1.1)
 
 dnl
 dnl Add esd and audiofile stuff
@@ -93,20 +92,12 @@ AC_SUBST(LIBGNOME_LIBS)
 GNOME_VFS_VERSION=`$PKG_CONFIG --modversion gnome-vfs-2.0`
 AC_SUBST(GNOME_VFS_VERSION)
 
-ORBIT_IDL="`$PKG_CONFIG --variable=orbit_idl ORBit-2.0`"
-AC_SUBST(ORBIT_IDL)
-
-BONOBO_IDLDIR="`$PKG_CONFIG --variable=idldir libbonobo-2.0`"
-AC_SUBST(BONOBO_IDLDIR)
-
 AC_CHECK_LIB(popt, poptStrippedArgv,, AC_MSG_ERROR([popt 1.5 or newer is required to build
 gnome-libs. You can download the latest version from ftp://people.redhat.com/sopwith/popt/]))
 
 AC_OUTPUT([
 Makefile
 po/Makefile.in
-idl/Makefile
-tests/Makefile
 libgnome/Makefile
 libgnome/libgnome-2.0.pc
 ])
