@@ -1,41 +1,0 @@
-#ifndef _GNOME_IDL_INCLUDED_
-#define _GNOME_IDL_INCLUDED_
-
-#if !defined(__GNOME_COMPILATION) && defined(__ORBIT_IDL__)
-%{
-#pragma include_defs libgnome/Gnome.h
-%}
-#pragma inhibit push
-#endif
-
-module GNOME {
-
-    typedef sequence<string> stringlist;
-
-    enum Tristate {
-	TRISTATE_DEFAULT,
-	TRISTATE_NO,
-	TRISTATE_YES
-    };
-
-    enum SelectionMode {
-	SELECTION_MODE_SINGLE,
-	SELECTION_MODE_BROWSE,
-	SELECTION_MODE_MULTIPLE,
-	SELECTION_MODE_EXTENDED
-    };
-
-    struct LocalizedString {
-	string locale;
-	string text;
-    };
-
-    typedef sequence<LocalizedString> LocalizedStringList;
-
-};
-
-#if !defined(__GNOME_COMPILATION) && defined(__ORBIT_IDL__)
-#pragma inhibit pop
-#endif
-
-#endif /* _GNOME_IDL_INCLUDED_ */
