@@ -1,9 +1,0 @@
-NULL=
-
-idldir = $(datadir)/idl
-
-idl_DATA =				\
-	Gnome.idl			\
-	$(NULL)
-
-EXTRA_DIST = $(idl_DATA)
