@@ -1,136 +1,0 @@
-2001-07-31  Martin Baulig  <baulig@suse.de>
-
-	* Gnome.idl (GNOME::LocalizedString, GNOME::LocalizedStringList): Moved here
-	from Gnome_Desktop.idl.
-
-	* Gnome_Desktop.idl: Removed. This file will be moved to gnome-core when George
-	is back from his holidays.
-
-2001-07-27  Martin Baulig  <baulig@suse.de>
-
-	* Gnome.idl (GNOME::Tristate, GNOME::SelectionMode): Moved these enums here
-	from Gnome_Selector.idl.
-
-2001-06-13  Martin Baulig  <baulig@suse.de>
-
-	* Gnome_Selector.idl: Moved to libgnome-extra/idl.
-
-2001-06-10  Martin Baulig  <baulig@suse.de>
-
-	If someone wants to hack on this stuff, have a look at the desktop entry spec at
-	http://www.freedesktop.org/standards/desktop-entry-spec/desktop-entry-spec.html
-	and add the missing fields to the GNOME::DesktopEntry.
-
-	* Gnome_Desktop.idl (GNOME::ExtraAttributes): New typedef. This is an alias
-	for Bonobo::PropertySet, but it has a "magic" meaning: if a struct contains
-	a member of this type, the ditem moniker fills it with all fields which are
-	not in the struct.
-	(GNOME::DesktopEntryType): New enum type.
-	(GNOME::DesktopEntry): Change type of `Exec' to string.
-	Added TryExec, URL, SortOder, Type and Attributes.
-
-2001-06-06  Martin Baulig  <baulig@suse.de>
-
-	* Gnome.idl (GNOME::stringlist): Moved this typedef here.
-
-	* Gnome_Desktop.idl: New file.
-	(GNOME::LocalizedString, GNOME::LocalizedStringList): New types.
-	(GNOME::DesktopEntry): New struct type.
-
-2001-06-04  Martin Baulig  <baulig@suse.de>
-
-	* Gnome_Selector.idl (GNOME::SelectorClient): New interface. This is only
-	here to work around a bug in Bonobo.
-	(GNOME::Selector::addEventSupplier): Return a Bonobo::EventSource::ListenerId.
-
-2001-06-02  Martin Baulig  <baulig@suse.de>
-
-	* Gnome_Selector.idl (GNOME::DirectoryFilter): Killed this Interface.
-	(GNOME::Selector): Removed the `autoActivateEntry' and `autoAddToList'
-	attributed.
-
-2001-06-02  Martin Baulig  <baulig@suse.de>
-
-	* Gnome_Selector.idl (GNOME::Selector::ActivateEntryAction): New enum type.
-	(GNOME::Selector::AddURIMode): New enum type.
-	(GNOME::Selector::getURIList): New method.
-
-2001-06-02  Martin Baulig  <baulig@suse.de>
-
-	* Gnome_Selector.idl (GNOME::Selector::AsyncData): Renamed to `private_AsyncData'.
-	(GNOME::Selector::AsyncReply): Renamed to `AsyncEvent'.
-	(checkURI, scanDirectory, setURI, addURI): Changed type of the `async_data'
-	argument to any.
-
-2001-06-01  Martin Baulig  <baulig@suse.de>
-
-	* Gnome_Selector.idl (GNOME::Selector): Removed the `entryText', `history'
-	and 'maxHistoryLines' attribues and put them into the property bag.
-
-2001-06-01  Martin Baulig  <baulig@suse.de>
-
-	* Gnome_Selector.idl
-	(GNOME::Selector::checkURI, GNOME::Selector::scanDirectory): New methods.
-
-2001-05-31  Martin Baulig  <baulig@suse.de>
-
-	* Gnome_Selector.idl (GNOME::Selector::getControl): raises(SelectorHasNoUI).
-	(GNOME::SelectorFactory::createSelector): Return a Bonobo::Unknown which can
-	be QI'ed for GNOME::Selector and Bonobo::Control.
-
-2001-05-31  Martin Baulig  <baulig@suse.de>
-
-	* Gnome_Selector.idl (GNOME::Selector::AsyncID): Moved to GNOME::AsyncID.
-	(GNOME::SelectorDialog): Removed this interface.
-	(GNOME::Selector): Improved this interface a lot.
-
-2001-05-25  Martin Baulig  <baulig@suse.de>
-
-	* Gnome_Selector.idl
-	(GNOME::Selector::AsyncType): Move to GNOME::AsyncType.
-	(SELECTOR_URI_LIST, SELECTOR_DEFAULT_URI_LIST, SELECTOR_ACTIVE_LIST,
-	SELECTOR_LIST_MAX): New constants.
-	(GNOME::Selector::addURI): New method.
-
-2001-05-25  Martin Baulig  <baulig@suse.de>
-
-	* Gnome_Selector.idl (GNOME::AsyncContext): New interface.
-
-	* Gnome_Selector.idl (GNOME::DirectoryFilter): New interface.
-	(GNOME::Selector::AsyncContext): Renamed to AsyncData.
-
-2001-05-21  Martin Baulig  <baulig@suse.de>
-
-	* Gnome_Selector.idl (GNOME::Tristate): New enum type.
-
-2001-05-20  Martin Baulig  <baulig@suse.de>
-
-	* Gnome_Selector.idl (GNOME::SelectorFactory): New interface.
-
-2001-05-08  Martin Baulig  <baulig@suse.de>
-
-	* Gnome_Selector.idl (GNOME::Selector::ClientID): New typedef.
-	(GNOME::Selector::AsyncID): New typedef.
-	(GNOME::Selector::AsyncType): New enum type.
-	(GNOME::Selector::AsyncContext): New struct.
-	(GNOME::Selector::AsyncReply): New struct.
-	(GNOME::Selector): Added getClientID(), getURI() and addURI().
-
-2001-05-07  Martin Baulig  <baulig@suse.de>
-
-	* Gnome_Selector.idl (GNOME::Selector): Added getEventSource().
-
-2001-04-30  Martin Baulig  <baulig@suse.de>
-
-	* Gnome_Selector.idl (GNOME::Selector): Added getControl(),
-	getEntryText(), setEntryText() and activateEntry().
-
-2001-04-30  Martin Baulig  <baulig@suse.de>
-
-	* Gnome_Selector.idl (GNOME::SelectionMode): New enum type.
-
-2001-04-30  Martin Baulig  <baulig@suse.de>
-
-	* Gnome.idl: New file.
-	* Gnome_Selector.idl: New file.
-
