@@ -1,3 +1,15 @@
+2001-09-02  Anders Carlsson  <andersca@gnu.org>
+
+	* Makefile.am: Don't build tests/
+	
+	* configure.in: Don't build tests, remove bonobo-config dependency.
+	
+	* idl/ChangeLog: Remove.
+	
+	* idl/Gnome.idl: Remove.
+	
+	* idl/Makefile.am: Remove.
+
 Sat Sep 01 23:05:23 2001  George Lebl <jirka@5z.com>
 
 	* configure.in, acconfig.h: Add some HAVE_ defines, and again
